tests/sema/err_undefined.diag
err_undefined.ax:1:1: error: undefined: 'y'
